--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.0",
+    "json-loader": "^0.5.4",
     "mongodb": "^2.2.24",
+    "node-sass-middleware": "^0.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
