--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Marco Robles",
   "license": "GPL-3.0",
   "dependencies": {
+    "axios": "^0.15.3",
     "ejs": "^2.5.6",
     "express": "^4.15.0",
     "json-loader": "^0.5.4",
