--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning FullStack using MongoDB, React, Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start server.js --watch",
+    "start": "nodemon --exec babel-node server.js --ignore public/",
     "dev": "webpack -wd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
