--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node server.js --ignore public/",
     "dev": "webpack -wd",
+    "mongoS" : "babel-node loadTestData.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marco Robles",
